--- a/requirements.txt
+++ b/requirements.txt
@@ -52,5 +52,5 @@ typing_extensions==4.12.2
 uagents==0.17.1
 urllib3==2.2.3
 uvicorn==0.30.6
-websockets==13.1
+websockets>=10.4, <11.0
 yarl==1.18.0
